[newclient] Completely avoid rendering if window is not visible

--- a/newclient/src/components/Window/index.css
+++ b/newclient/src/components/Window/index.css
@@ -41,10 +41,6 @@
   width: 100%;
 }
 
-.hidden {
-  display: none;
-}
-
 .textarea:focus {
   background-color: rgb(247, 243, 200);
   color: blue;
